--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,17 @@
-# Compiled class file
+target/
+!.mvn/wrapper/maven-wrapper.jar
 *.class
-
-# Log file
+.apt_generated
+.classpath
+.factorypath
+.project
+.settings
+.springBeans
 *.log
-
-# BlueJ files
-*.ctxt
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
+.idea
+*.iws
+*.iml
+*.ipr
 *.jar
 *.war
 *.nar
@@ -18,6 +19,13 @@
 *.zip
 *.tar.gz
 *.rar
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+.mtj.tmp/
+*.ctxt
+nbproject/private/
+build/
+nbbuild/
+dist/
+nbdist/
+.nb-gradle/
+error_hotspot.xml
 hs_err_pid*
