--- a/pom.xml
+++ b/pom.xml
@@ -3,13 +3,13 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>com.techprimers.security</groupId>
-	<artifactId>jwt-security</artifactId>
+	<groupId>br.com.robersonfox</groupId>
+	<artifactId>vocation</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>jwt-security</name>
-	<description>Demo project for Spring Boot</description>
+	<name>Vocation</name>
+	<description></description>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
