--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,6 @@
 
 	<groupId>br.com.robersonfox</groupId>
 	<artifactId>vocation</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<name>Vocation</name>
@@ -26,6 +25,11 @@
 
 	<dependencies>
 	
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+			</dependency>
+
 		<dependency>
 			<groupId>com.google.zxing</groupId>
 			<artifactId>core</artifactId>
@@ -85,4 +89,8 @@
 	</build>
 
 
+	<organization>
+		<name>Roberson Carlos</name>
+	</organization>
+	<version>1.0</version>
 </project>
